[tool.poetry]
name = "async"
version = "0.1.0"
description = ""
authors = ["Nadezhda Lavrenteva <lavrenteva-na@zvuk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
aiohttp = "^3.11.14"
ruff = "^0.11.2"
mypy = "^1.15.0"
asyncio = "^3.4.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
